# floorplan-gazebo-plugins

./: CMakeLists.txt  README.md  build_gazebo_plugins.sh  package.xml
adversarial-gazebo-plugin/: CMakeLists.txt
config/: keyframes_door_0.json  keyframes_door_1.json  keyframes_door_10.json  keyframes_door_2.json  keyframes_door_3.json  keyframes_door_4.json  keyframes_door_5.json  keyframes_door_6.json  keyframes_door_7.json  keyframes_door_8.json  keyframes_door_9.json
initial-joint-pose-plugin/: CMakeLists.txt  initial_plugin.cc
initial-state-plugin/: README.md
src/: adversarial_joints_plugin.cc  distance_triggered_joint_state_change_plugin.cc  dynamic_joints_plugin.cc  initial_joint_state_plugin.cc  initial_plugin.cc  timed_joint_state_change_plugin.cc
src/tests/actions/: door.json
time-based-dynamic-joint-plugin/: CMakeLists.txt  dynamic_joints_plugin.cc
time-based-dynamic-joint-plugin/tests/: plugin_test_world.world
trigger-based-dynamic-joint-plugin/: CMakeLists.txt  adversarial_joints_plugin.cc
